--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "next": "15.3.4",
+    "@shopify/cli": "^3.81.2",
+    "axios": "^1.10.0",
+    "child_process": "^1.0.2",
+    "form-data": "^4.0.3",
+    "fs": "^0.0.1-security",
+    "node-pty": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
