--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.0.0",
     "next": "15.3.4",
     "@shopify/cli": "^3.81.2",
+    "@shopify/cli-hydrogen": "^5.0.0",
     "axios": "^1.10.0",
     "child_process": "^1.0.2",
     "form-data": "^4.0.3",
