--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "package.json",
@@ -9,7 +10,10 @@
       }
     }
   ],
-  "env": {
-    "SHOPIFY_CLI_PATH": "./node_modules/.bin/shopify"
+  "functions": {
+    "app/api/stream-updates/route.js": {
+      "memory": 1024,
+      "maxDuration": 60
+    }
   }
 }
